--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "node",
   "version": "1.0.0",
-  "main": "project1.js",
+  "main": "./src/project1.ts",
   "scripts": {
-    "start": "nodemon project1.js"
+    "dev": "nodemon --exec ts-node src/project1.ts",
+    "start": "nodemon src/project1.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2",
+    "mongoose": "^8.12.1",
     "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/express-status-monitor": "^1.3.3",
+    "@types/node": "^22.13.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
